themes/luci-theme-material/htdocs/luci-static/material/cascade.css
/* ... */
input[name="ping"],
input[name="traceroute"],
input[name="nslookup"] {
    width: 80%;
}

header > .container > .pull-right > * {
    position: relative;
    top: 0.45rem;
    cursor: pointer;
}

#xhr_poll_status > .label.success {
    background-color: #14CE14;
}

#xhr_poll_status {
    display: flex;
}

.label {
    padding: 0.3rem 0.8rem;
    font-size: 0.8rem;
    font-weight: bold;
    color: #ffffff !important;
    text-transform: uppercase;
    white-space: nowrap;
    background-color: #bfbfbf;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    text-shadow: none;
    text-decoration: none;
}

.notice {
    background-color: #5BC0DE;
}

.showSide {
    display: none;
}

.darkMask {
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.56);
    content: "";
    z-index: 99;
    display: none;
}

/* fix Main Login*/
.node-main-login > .main > .main-left {
    display: none;
}

.node-main-login > .main > .main-right {
    width: 100%;
}

.node-main-login > .main fieldset {
    padding: 0.5rem;
    margin-bottom: 1rem;
    display: inline;
    background: none;
    border: none;
    box-shadow: none;
    overflow: hidden;
}

.node-main-login > .main .cbi-value-title {
    width: 7rem;
}

.node-main-login > .main #maincontent {

    text-align: center;
}

.node-main-login > .main .container {
    display: inline-block;
    padding: 2rem 4rem;
    margin-top: 2rem !important;
    background-color: #FFF;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
    text-align: left;
}

.node-main-login > .main form > div:nth-last-child(1) {
    float: right;
}

.node-main-login > .main .cbi-value {
    display: block;
}

.node-main-login > .main .cbi-value > * {
    display: inline-block !important;
}

.node-main-login > .main .cbi-input-user,
.node-main-login > .main .cbi-input-password {
    min-width: 15rem;
}

.node-main-login footer {
    bottom: 0;
    position: absolute;
    width: 100%;
}

/* fix status overview */

.node-status-overview > .main fieldset:nth-child(4) .td:nth-child(2) {
    white-space: normal;
}

/* fix status processes */

.node-status-processes > .main .table .tr .td:nth-child(3) {
    white-space: normal;
}

.node-status-iptables > .main div > .cbi-map > form {
    margin: 2rem 2rem 0 0;
}

/* fix system reboot */

.node-system-reboot > .main > .main-right p,
.node-system-reboot > .main > .main-right h3 {
    padding-left: 2rem;
}

/* fix Services  Network Shares*/
.node-services-samba > .main .cbi-tabcontainer:nth-child(3) .cbi-value-title {
    margin-bottom: 1rem;
    width: auto;
}

.node-services-samba > .main .cbi-tabcontainer:nth-child(3) .cbi-value-field {
    display: list-item;
}

.node-services-samba > .main .cbi-tabcontainer:nth-child(3) .cbi-value-description {
    padding-top: 1rem;
}

/* fix System Software*/
.node-system-packages > .main table tr td:nth-child(1) {
    width: auto !important;
}

.node-system-packages > .main table tr td:nth-last-child(1) {
    white-space: normal;
    font-size: small;
    color: #404040;
}

.node-system-packages > .main .cbi-tabmenu > li > a, .tabs > li > a {
    padding: 0.5rem 0.8rem;
}

.node-system-packages > .main .cbi-value > pre {
    background-color: #eee;
    padding: 0.5rem;
    overflow: auto;
}

.cbi-tabmenu + .cbi-section {
    margin-top: 0;
}

.node-status-iptables fieldset,
.node-system-packages fieldset,
.node-system-flashops fieldset {
    margin-top: 0;
}

.node-status-iptables .cbi-tabmenu,
.node-system-packages .cbi-tabmenu,
.node-system-flashops .cbi-tabmenu {
    border: none;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 0 2px 0 rgba(0, 0, 0, .12);
}

.node-system-flashops form.inline + form.inline {
    margin-left: 0;
}

#cbi-firewall-redirect table *,
#cbi-network-switch_vlan table *,
#cbi-firewall-zone table * {
    font-size: small;
}

#cbi-firewall-redirect table input[type="text"],
#cbi-network-switch_vlan table input[type="text"],
#cbi-firewall-zone table input[type="text"] {
    width: 5rem;
}

#cbi-firewall-redirect table select,
#cbi-network-switch_vlan table select,
#cbi-firewall-zone table select {
    min-width: 3.5rem;
}

#cbi-network-switch_vlan .th,
#cbi-network-switch_vlan .td {
    flex-basis: 12%;
}

/* language fix */
body.lang_pl.node-main-login .cbi-value-title {
    width: 12rem;
}

/* applyreboot fix */

#applyreboot-container {
	margin: 2rem;
}

#applyreboot-section {
	margin: 2rem;
	line-height: 300%;
}

@media screen and (max-width: 1600px) {
    .btn,
    .cbi-button {
        padding: 0.3rem 0.6rem;
        font-size: 0.8rem;
    }

    header > .container > .pull-right > * {
        top: 0.35rem;
    }

    .label {
        padding: 0.2rem 0.6rem;
    }

    .cbi-value-title {
        width: 15rem;
        padding-right: 0.6rem;
    }

    fieldset {
        padding: 1rem;
    }

    .cbi-input-textarea {
        font-size: small;
    }

    .node-status-iptables > .main fieldset li > a {
        padding: 0.3rem 0.6rem;
    }
}

@media screen and (max-width: 1280px) {
    header > .container {
        margin-top: 0.25rem;
    }

    .cbi-tabmenu > li > a, .tabs > li > a {
        padding: 0.2rem 0.5rem;
    }

    .panel-title {
        font-size: 1.1rem;
        padding-bottom: 1rem;
    }

    table {
        font-size: 0.7rem !important;
        width: 100% !important;
    }
}
/* ... */

